# playground

./: .dockerignore  .env.development  .gitignore  .gitmodules  404.html  Dockerfile  README.md  TODO.md  build_image  docker-compose-dev.yml  docker-compose.yml  index.html  init.sh  main_dev.py  mkdocs.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  wsgi.py
apps/demo/: Dockerfile  build.sh  package.json
apps/genie-brickified/: .gitignore  build.sh  package.json  requirements.txt  wsgi.py
benchmark/: README.md  benchmark.py  center_hall.ttl  docker-compose.yml
brick_server/playground/: __main__.py  app.py  config.py  dbs.py  models.py  schemas.py
brickserver_playground/: Dockerfile  README.md  main.py  requirements.txt
brickserver_playground/playground/: __init__.py  dbs.py
brickserver_playground/tools/: activate_apps_for_user  deploy_playground.sh  get_jwt_token  register_admin
config/: config.ts  index.html
config/auth/: index.html
config/backend/: index.html
config/db/: index.html
configs/: backend_configs.json
deployment/: index.html
docker/: prestart.sh
docs/: about.md  config.md  deployment.md  init.md
docs/config/: backend.md  db.md  index.md
docs/tutorial/: buildsys2024.md  write_a_permission_profile.md  write_an_app.md
examples/: sample_app.yaml
examples/data/: center_hall.ttl  ref-schema.ttl
examples/market_apps/: app1.yml  sample_app.yaml
geniebackend/: api.py  auth.py  config.json  configs.py  endpoints.py
init/: index.html
playground/: __init__.py  dbs.py  models.py
playground/app_management/: app_management.py  redis_instance.py
playground/auth/: auth_server.py  authorization.py
playground/iptables_manager/: iptables_manager.proto  iptables_manager.py  iptables_manager_pb2.py  iptables_manager_pb2_grpc.py  test_client.py
playground/services/: admins.py  apps.py  market_apps.py  models.py  users.py
projects/: .dockerignore
projects/sbos-frontend/: .eslintignore  .eslintrc.js  package.json
projects/sbos-minimal/: Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml
projects/sbos-monitor/: Dockerfile  pyproject.toml
projects/sbos-monitor/sbos/monitor/: __main__.py
projects/sbos-monitor/sbos/monitor/config/: manager.py
projects/sbos-monitor/sbos/monitor/config/settings/: base.py
projects/sbos-playground/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
projects/sbos-playground/.github/workflows/: ci.yml
projects/sbos-playground/benchmark/: README.md  docker-compose.yml
projects/sbos-playground/brickserver_playground/: README.md  TODO.md  build_image  main.py  main_dev.py  pytest.ini  requirements.txt
projects/sbos-playground/brickserver_playground/configs/: configs.json.template
projects/sbos-playground/brickserver_playground/playground/: models.py
projects/sbos-playground/brickserver_playground/playground/app_management/: app_management.py
projects/sbos-playground/brickserver_playground/playground/auth/: auth_server.py  models.py
projects/sbos-playground/brickserver_playground/playground/iptables_manager/: iptables_manager.proto  iptables_server.py
projects/sbos-playground/brickserver_playground/playground/services/: admins.py  models.py  users.py
projects/sbos-playground/brickserver_playground/tests/remote/: common.py  data.py  requirements.txt  test_activate_apps.py  test_app_static.py  test_apps.py
projects/sbos-playground/brickserver_playground/tests/remote/app_hosting/: test_app_apis.py
projects/sbos-playground/brickserver_playground/tools/: add_user_rooms  get_jwt_token  load_appmarket  prep.sh  register_admin  upgrade_brick_users
projects/sbos-playground/docs/: deployment.md
projects/sbos-playground/docs/config/: auth.md
projects/sbos-playground/examples/app_srcs/app1/: index.py
projects/sbos-playground/examples/data/: center_hall.ttl  center_hall.txt  center_hall_rooms.txt  center_hall_rooms_2.txt
projects/sbos-playground/examples/data/app_manifests/: sample_app.yaml
projects/sbos-playground/sbos/playground/: __main__.py  app.py
projects/sbos-playground/sbos/playground/config/: errors.py  events.py  manager.py
projects/sbos-playground/sbos/playground/config/settings/: base.py  development.py  staging.py
projects/sbos-playground/sbos/playground/interfaces/: __init__.py  app_management.py
projects/sbos-playground/sbos/playground/interfaces/actuation_guard/: __init__.py  ml.py  naive.py  range_checker.py
projects/sbos-playground/sbos/playground/interfaces/iptables_manager/: iptables_manager_core.py  iptables_manager_pb2.py  iptables_server.py  test_client.py
projects/sbos-playground/sbos/playground/interfaces/scheduling_policy/: base.py  naive.py
projects/sbos-playground/sbos/playground/models/: app.py  domain.py  permission.py
projects/sbos-playground/sbos/playground/schemas/: __init__.py  app.py  docker.py  domain.py  permission.py  resource.py
projects/sbos-playground/sbos/playground/securities/: auth.py
projects/sbos-playground/sbos/playground/services/: __init__.py  actuation.py  admins.py  app.py  domain.py  profile.py  user.py
projects/sbos-playground/sbos/playground/utilities/: __models.py  dependencies.py  exceptions.py
projects/sbos-playground/tests/: common.py  conftest.py  utils.py
sbos/minimal/: __main__.py
src/: app.tsx  config.js  index.js  requestErrorConfig.ts
src/client/: Mainpage.js
src/pages/: Admin.tsx
static/app1/: index.html
static/genie/: asset-manifest.json  index.html  precache-manifest.235a7221216af66b0ca9824e6c97f004.js  precache-manifest.492e6ae60f06f89585af9c62dfd3de9a.js  precache-manifest.e2741d2dd6b9814f2c17f03dc1168b21.js  service-worker.js
tests/: _benchmark.py  conftest.py  utils.py
tests/remote/: common.py  requirements.txt  test_activate_apps.py  test_app_apis.py  (+6 more)
tools/: activate_apps_for_user  add_user_rooms  deploy_playground.sh  docker-compose-bk.yml  exec_docker_bk.sh  get_jwt_token  init_docker_env.sh  init_network.sh  load_appmarket  register_admin  upgrade_brick_users.py
(+230 files in other folders)
