[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Brick Dev Team <x5fu@ucsd.edu>"]
description = "brick server playground"
license = "BSD-3-Clause"
name = "brick-server-playground"
packages = [
  {include = "brick_server"}
]
repository = "https://gitlab.com/mesl/brickserver/brick-server-playground"
version = "0.1.0"

[tool.poetry.dependencies]
brick-server-minimal = {develop = true, path = "../brick-server-minimal"}
docker = "^6.1.3"
python = ">=3.7,<3.11"
redis = "^4.5.5"

[tool.poetry.dev-dependencies]
asgi-lifespan = "^1.0.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-depends = "^1.0.1"
pytest-env = "^0.6.2"
pytest-ordering = "^0.6"

[tool.pycln]
all = true

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
log_cli = 1
