[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Brick Dev Team <x5fu@ucsd.edu>"]
description = "brick server playground"
license = "BSD-3-Clause"
name = "brick-server-playground"
packages = [
  {include = "brick_server"}
]
repository = "https://gitlab.com/mesl/brickserver/brick-server-playground"
version = "0.1.0"

[tool.poetry.dependencies]
brick-server-minimal = {develop = true, path = "../brick-server-minimal"}
docker = "^6.1.3"
patool = "^2.2.0"
python = "^3.10"
# torch = {version = "^2.2.0+cpu", source = "pytorch-cpu", markers = "extra!='cuda'"}
#
# [tool.poetry.group.remote]
# optional = true
#
# [tool.poetry.group.remote.dependencies]
# torch = {version = "^2.2.0+cu121", source = "pytorch-cu121", markers = "extra=='cuda'"}
#
# [tool.poetry.extras]
# cuda = []
#
# [[tool.poetry.source]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# priority = "explicit"
#
# [[tool.poetry.source]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# priority = "explicit"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
asgi-lifespan = "^1.0.1"
black = "^24.4.0"
pre-commit = "^3.7.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-depends = "^1.0.1"
pytest-env = "^0.6.2"
pytest-ordering = "^0.6"
tenacity = "^8.1.0"

[tool.pycln]
all = true

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
log_cli = 1
